--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "Online version of board game Magic Maze",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack"
   },
   "repository": {
     "type": "git",
