--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Ashugeo/magic-maze",
   "dependencies": {
     "express": "^4.15.2",
+    "npm": "^6.3.0",
     "p5": "^0.5.16",
     "socket.io": "^2.0.4"
   },
