--- a/app/package.json
+++ b/app/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "magic-maze",
-  "version": "1.0.0",
-  "description": "Online version of board game Magic Maze",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Ashugeo/magic-maze.git"
-  },
-  "author": "Ashugeo",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ashugeo/magic-maze/issues"
-  },
-  "homepage": "https://github.com/Ashugeo/magic-maze",
-  "dependencies": {
-    "express": "^4.15.2",
-    "npm": "^6.4.1",
-    "p5": "^0.5.16",
-    "socket.io": "^2.0.4"
-  },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "jshint": "^2.9.5",
-    "jshint-loader": "^0.8.4",
-    "node-libs-browser": "^2.1.0",
-    "webpack": "^3.10.0"
-  }
+    "name": "magic-maze",
+    "version": "1.0.0",
+    "description": "Online version of board game Magic Maze",
+    "main": "webpack.config.js",
+    "scripts": {
+        "dev": "webpack --config dev.config.js",
+        "prod": "webpack --config prod.config.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Ashugeo/magic-maze.git"
+    },
+    "author": "Ashugeo",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Ashugeo/magic-maze/issues"
+    },
+    "homepage": "https://github.com/Ashugeo/magic-maze",
+    "dependencies": {
+        "express": "^4.15.2",
+        "npm": "^6.5.0",
+        "p5": "^0.5.16",
+        "socket.io": "^2.0.4"
+    },
+    "devDependencies": {
+        "babel": "^6.23.0",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "jshint": "^2.9.5",
+        "jshint-loader": "^0.8.4",
+        "node-libs-browser": "^2.1.0",
+        "webpack": "^5.0.0-alpha.3",
+        "webpack-cli": "^3.1.2"
+    }
 }
