--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "app": "node ./src/server/server.js",
         "dev": "webpack --config webpack.config.js",
-        "prod": "NODE_ENV=production webpack --config webpack.config.js"
+        "prod": "NODE_ENV=production webpack --config webpack.config.js --progress"
     },
     "repository": {
         "type": "git",
@@ -30,9 +30,12 @@
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "extract-loader": "^3.1.0",
+        "extract-text-webpack-plugin": "^3.0.2",
         "jshint": "^2.10.2",
         "jshint-loader": "^0.8.4",
         "node-libs-browser": "^2.2.0",
+        "uglifyjs-webpack-plugin": "^2.1.3",
         "webpack": "^5.0.0-alpha.14",
         "webpack-cli": "^3.3.2"
     }
