--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^3.4.1",
         "extract-loader": "^3.1.0",
         "extract-text-webpack-plugin": "^3.0.2",
+        "file-loader": "^5.0.2",
         "jshint": "^2.10.2",
         "jshint-loader": "^0.8.4",
         "node-libs-browser": "^2.2.0",
+        "node-sass": "^4.13.0",
+        "sass-loader": "^8.0.0",
         "uglifyjs-webpack-plugin": "^2.1.3",
         "webpack": "^5.0.0-alpha.14",
         "webpack-cli": "^3.3.2"
