--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "homepage": "https://github.com/Ashugeo/magic-maze",
     "dependencies": {
         "express": "^4.17.1",
-        "nodemon": "^2.0.3",
-        "npm": "^6.14.4",
+        "nodemon": "^2.0.6",
+        "npm": "^6.14.8",
         "p5": "^0.5.16",
         "socket.io": "^2.2.0"
     },
@@ -33,17 +33,17 @@
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
-        "css-loader": "^3.4.1",
-        "extract-loader": "^3.1.0",
+        "css-loader": "^3.6.0",
+        "extract-loader": "^3.2.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^5.0.2",
-        "jshint": "^2.10.2",
+        "jshint": "^2.12.0",
         "jshint-loader": "^0.8.4",
         "node-libs-browser": "^2.2.0",
-        "node-sass": "^4.13.0",
+        "node-sass": "^4.14.1",
         "sass-loader": "^8.0.0",
         "uglifyjs-webpack-plugin": "^2.1.3",
-        "webpack": "^5.0.0-alpha.14",
-        "webpack-cli": "^3.3.2"
+        "webpack": "^5.3.2",
+        "webpack-cli": "^3.3.12"
     }
 }
