--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "nodemon": "^2.0.6",
-        "npm": "^6.14.8",
+        "npm": "^7.3.0",
         "p5": "^0.5.16",
         "socket.io": "^2.2.0"
     },
@@ -41,9 +41,11 @@
         "jshint-loader": "^0.8.4",
         "node-libs-browser": "^2.2.0",
         "node-sass": "^4.14.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.30.0",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^2.0.0",
         "uglifyjs-webpack-plugin": "^2.1.3",
-        "webpack": "^5.3.2",
+        "webpack": "^5.11.1",
         "webpack-cli": "^3.3.12"
     }
 }
